# turn-detection

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: default.yaml
configs/experiment/: rubert.yaml
configs/infer/: default.yaml
configs/model/: default.yaml  rubert.yaml
configs/serve/: default.yaml
configs/train/: default.yaml
data/: .gitignore  raw.dvc  sample_inference.json
data/raw/: custom_data.dvc
models/: model.onnx.dvc
models/turn_detection/: config.pbtxt
models/turn_detection/1/: .gitignore  model.plan.dvc
scripts/: convert_to_tensorrt.sh
src/: commands.py
src/data/: __init__.py  download.py
src/models/: model.py
turn_detection/: __init__.py  commands.py  serve.py
turn_detection/data/: __init__.py  download.py  prepare.py
turn_detection/models/: __init__.py  model.py
